fix flicker

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -241,10 +241,10 @@
 @keyframes fadeIn {
   from {
     opacity: 0;
-    transform: translateX(-50%) translateY(4px);
+    transform: translateY(8px);
   }
   to {
     opacity: 1;
-    transform: translateX(-50%) translateY(0);
+    transform: translateY(0);
   }
 }
